<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ECG</string>
    <string name="action_settings">Settings</string>
    <string name="connected">connected</string>
    <string name="failed_to_connect">failed to connect\ntap to try again</string>
    <string name="tap_to_connect">tap to connect</string>
    <string name="continue_without_connecting">tap to continue without connecting</string>
    <string name="disconnected">disconnected</string>
    <string name="record">Record</string>
    <string name="recording">recording...</string>
    <string name="recording_in_progress">Recording in progress!</string>
    <string name="text_empty_error">This cannot be empty</string>
    <string name="invalid_value">Invalid value</string>
    <string name="patient_details">Patient Details</string>
    <string name="last_name">Last</string>
    <string name="first_name">First</string>
    <string name="name">NAME</string>
    <string name="pregnancy_month">MONTH</string>
    <string name="notes">NOTES</string>
    <string name="save">Save</string>
    <string name="patients">Patients</string>
    <string name="graph">Graph</string>
    <string name="delete">Delete</string>
    <string name="select_items">Select Items</string>
    <string name="delete_records">Delete Records?</string>
    <string name="cant_undo_delete">You cannot undo this. All uploaded data will not be deleted.</string>
    <string name="upload">Upload</string>
    <string name="login">Login</string>
    <string name="google_auth_ok">Google account authenticated</string>
    <string name="activity_upload">Upload Queue</string>
    <string name="uploading_data">Uploading Data</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="error_uploading">Upload Failed</string>
    <string name="error_uploading_msg">One or more failures. Make sure to login in Settings</string>
    <string name="uploaded">Uploaded</string>
    <string name="records">records</string>
    <string name="generating_random_patient">Generating random patient...</string>
    <string name="fusion_tables">Fusion Tables</string>
    <string name="dropbox">Dropbox</string>
    <string name="select_fusion_tables_acc">select fusion tables account</string>
    <string name="select_dropbox_acc">select dropbox account</string>
    <string name="reupload">REUPLOAD</string>
    <string name="reupload_records">ReUpload Records</string>
    <string name="reupload_message">Data will be marked for reupload, duplicates may result</string>
    <string name="select_all">Select All</string>
    <string name="no_patient_records">you have no patient records</string>
    <string name="general">General</string>
    <string name="record_time">Record Time</string>
    <string name="record_time_summary">Enter record time in seconds</string>
    <string name="settings">Settings</string>
    <string name="accounts">Accounts</string>
    <string name="google">Google</string>
    <string name="graph_max_points_summary">Number of points on the graph, more will be slower</string>
    <string name="graph_max_points">Number of Plot Points</string>
    <string name="device_id">DEVICE ID</string>
    <string name="finger_clip_id">FINGER CLIP ID</string>
    <string name="patient_id">PATIENT ID</string>
    <string name="skin_tone">SKIN TONE</string>
    <string name="edit_current_patient_details">Edit Current Patient</string>
    <string name="wait_until_recording_done">Please wait until the current recording is done</string>
    <string name="plot">Plot</string>
    <string name="traces">Traces</string>
    <string name="trace_1_label">Trace 1 Label</string>
    <string name="trace_2_label">Trace 2 Label</string>
    <string name="trace_3_label">Trace 3 Label</string>
    <string name="trace_4_label">Trace 4 Label</string>
    <string name="advanced">Advanced</string>
    <string name="reset_preferences">Reset Preferences</string>
    <string name="reset_message">This will reset all default values</string>
    <string name="restart_to_apply">Restart app to apply</string>
    <string name="prefs_view_release_notes">Release Notes</string>
    <string name="data_already_uploaded">data has already been uploaded</string>
    <string name="connect_hardware">Connect Hardware</string>
    <string name="dob">DOB</string>

</resources>
