<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/connect_imageButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_circle_connect"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="fitCenter" />

    <org.centum.android.ecg.utils.styledviews.RobotLightTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/connect_hardware"
        android:id="@+id/title_textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textSize="32sp"
        android:layout_marginTop="32dp" />

    <org.centum.android.ecg.utils.styledviews.RobotThinTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_connect"
        android:id="@+id/message_textView"
        android:layout_below="@+id/connect_imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:gravity="center_horizontal" />

    <org.centum.android.ecg.utils.styledviews.RobotLightTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_without_connecting"
        android:id="@+id/skip_textView"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="?android:attr/selectableItemBackground" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_right"
        android:layout_alignTop="@+id/skip_textView"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp" />
</RelativeLayout>
